--- a/README
+++ b/README
@@ -1,10 +1,18 @@
+ASDF System wrapper for AP5 sources. 
+Official sources ap5-20120509.zip download from: http://ap5.com/
+Sources with some patches see in: ap5/ap5-20120509/
+About patches see here (below) and commits log.
+
+
+Details:
+-----------------------------------
 1. Into "initial commit" ap5 sources exactly from ap5-20120509.zip.
 
 Patches.
 1. In sys-depe.lsp lispworks:without-preemption changed to system:with-other-threads-disabled
 	This is temporary decision. From lispworks manual: "with-other-threads-disabled cannot be guaranteed to be 100% safe in all cases, and therefore must not be used in end-user applications. It is useful for debugging purposes."
 
-2. In partial-.lsp added relation FALSE and changed relation 'UNORDERED
+2. In partial-.lsp added relation FALSE and changed relation UNORDERED
 
 3. Added keyword :nevercompile to load-ap5 function.
 
